# tripoflux-mlx

./: .gitignore  LICENSE  README.md  mlx-community-submission.md  pyproject.toml
configs/: default.yaml
frontend/: app.js  index.html  package-lock.json  package.json  splat-viewer.js  vite.config.ts
frontend/src/: App.tsx  api.ts  lkg.ts  lookingglass-webxr.d.ts  main.tsx  styles.css
frontend/src/components/: ImagePreview.tsx  ProgressPanel.tsx  SplatViewport.tsx  Terminal.tsx
hf_model/: README.md
hf_model/mlx_models/: dinov3_mlx.py  flow_mlx.py  flux2vae_mlx.py
scripts/: benchmark_flux.py  download_models.sh  web_test.py
tests/: test_export.py  test_memory.py  test_pipeline.py
tripoflux/: mem_utils.py  pipeline.py  server.py
tripoflux/models/: birefnet_coreml.py  birefnet_da2.py  birefnet_mlx.py  birefnet_sam3.py  coreml_utils.py  decoder_mlx.py  flux_klein_mlx.py  spz_utils.py  triposplat_mlx_pipeline.py  triposplat_wrapped.py
