[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tripoflux-mlx"
version = "0.1.0"
description = "MLX/CoreML accelerated Flux Klein → BiRefNet → TripoSplat pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "TripoFlux MLX Team"},
]
keywords = ["mlx", "coreml", "triposplat", "flux", "gaussian-splatting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# Apple-Silicon-only project: MLX/CoreML stacks require macOS arm64 by design,
# so (following mlx-vlm/mflux convention) no platform markers are used.
dependencies = [
    # --- Core runtime ---
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "mlx>=0.15.0",
    "numpy>=1.24.0",
    "safetensors>=0.4.0",
    "Pillow>=10.0.0",
    "tqdm>=4.65.0",
    # --- Model stacks ---
    "mflux @ git+https://github.com/Jup33Q/mflux.git@main",  # FLUX.2-klein MLX (fork with PR #481)
    "mlx-vlm>=0.6.6",       # SAM3 background removal (MLX)
    "diffusers>=0.27.0",    # FLUX fallback path (MPS)
    "transformers>=4.38.0", # DA2 background removal
    "coremltools>=7.0",     # CoreML background removal backends
    # --- Weights & export ---
    "huggingface-hub>=0.21.0",
    "spz>=0.0.1",           # SPZ Gaussian-splat export
    # --- Web server & client ---
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    # NOTE: do NOT install brotli/brotlicffi alongside httpx — their streaming
    # decoder breaks huggingface-hub downloads (DecodingError). httpx falls
    # back to gzip content-encoding without them.
    "httpx>=0.27.0",        # scripts/web_test.py, TestClient, hub reachability probe
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
tripoflux-serve = "tripoflux.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tripoflux*", "scripts*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
